--- a/index.html
+++ b/index.html
@@ -499,11 +499,11 @@
                             <!--==================== QUALIFICATION 1 ====================-->
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Software Enginner</h3>
-                                    <span class="qualification__subtitle">Microsoft - Brasil</span>
+                                    <h3 class="qualification__title">Computer Vision Enginner and Data Analyst</h3>
+                                    <span class="qualification__subtitle">CamCann, eduMats, onTribe</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2016 - 2018
+                                        2019 - 2020
                                     </div>
                                 </div>
 
@@ -523,11 +523,11 @@
                                 </div>
 
                                 <div>
-                                    <h3 class="qualification__title">Frontend Developer</h3>
-                                    <span class="qualification__subtitle">Apple Inc - Brasil</span>
+                                    <h3 class="qualification__title">Core Committee Member</h3>
+                                    <span class="qualification__subtitle">Computer Society of India and ACM-VIT</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2018- 2019
+                                        2019- 2021
                                     </div>
                                 </div>
                             </div>
@@ -535,11 +535,11 @@
                             <!--==================== QUALIFICATION 3 ====================-->
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Ui Designer</h3>
-                                    <span class="qualification__subtitle">Figma - EUA</span>
+                                    <h3 class="qualification__title">Computer Vision Enginner and Data Analyst</h3>
+                                    <span class="qualification__subtitle">Blackcoffer</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2019 - 2021
+                                        2021 - 2021
                                     </div>
                                 </div>
 
@@ -563,7 +563,7 @@
                     <div class="services__content">
                         <div>
                             <i class="uil uil-web-grid services__icon"></i>
-                            <h3 class="services__title">Ui/Ux <br> Designer</h3>
+                            <h3 class="services__title">Deep<br> Learning</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
@@ -573,25 +573,25 @@
 
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">Ui/Ux <br> Designer</h4>
+                                <h4 class="services__modal-title">Deep <br> Learning</h4>
                                 <i class="uil uil-times services__modal-close"></i>
 
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Desenvolvimento de interface de usuário</p>
+                                        <p>Any Artifitial Intlligance project</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Desenvolvimento de páginas web.</p>
+                                        <p>Devlop Data pipelines for model deployment</p>.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Crio interações nos elementos ux.</p>
+                                        <p>Computer Vision and Natural Language Processing.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Posicionamento de marca.</p>
+                                        <p>Advance Models architectures and Model Optimization</p>
                                     </li>
                                 </ul>
                             </div>
@@ -602,7 +602,7 @@
                     <div class="services__content">
                         <div>
                             <i class="uil uil-arrow services__icon"></i>
-                            <h3 class="services__title">Frontend <br> Developer</h3>
+                            <h3 class="services__title">Python <br> Developer</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
@@ -612,26 +612,26 @@
 
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">Frontend <br> Developer</h4>
+                                <h4 class="services__modal-title">Python <br> Developer</h4>
                                 <i class="uil uil-times services__modal-close"></i>
 
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Desenvolvimento de interface de usuário</p>
+                                        <p>Databases management</p> 
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Desenvolvimento de páginas web.</p>
+                                        <p>Devloping Libraries and modules.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Crio interações nos elementos ux.</p>
+                                        <p>Backend Development.</p>
                                     </li>
-                                    <li class="services__modal-service">
+                                    <!-- <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>Posicionamento de marca.</p>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                         </div>
@@ -641,7 +641,7 @@
                     <div class="services__content">
                         <div>
                             <i class="uil uil-pen services__icon"></i>
-                            <h3 class="services__title">Branding <br> Designer</h3>
+                            <h3 class="services__title">Other<br> Services</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
@@ -651,26 +651,26 @@
 
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">Branding <br> Designer</h4>
+                                <h4 class="services__modal-title">Other<br> Services</h4>
                                 <i class="uil uil-times services__modal-close"></i>
 
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Desenvolvimento de interface de usuário</p>
+                                        <p>Research papers</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Desenvolvimento de páginas web.</p>
+                                        <p>Internet of things.</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Crio interações nos elementos ux.</p>
+                                        <p>Javascript backend.</p>
                                     </li>
-                                    <li class="services__modal-service">
+                                    <!-- <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>Posicionamento de marca.</p>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                         </div>
@@ -679,68 +679,7 @@
             </section>
 
             <!--==================== PORTFOLIO ====================-->
-            <section class="portfolio section" id="portfolio">
-                <h2 class="section__title">Portfolio</h2>
-                <span class="section__subtitle">Meus projetos recentes</span>
-
-                <div class="portfolio__container container swiper-container">
-                    <div class="swiper-wrapper">
-                        <!--==================== PORTFOLIO 1 ====================-->
-                        <div class="portfolio__content grid swiper-slide">
-                            <img src="./assets/img/portfolio1.jpg" alt="" class="portfolio__img">
-
-                            <div class="portfolio__data">
-                                <h3 class="portfolio__title">Project 1</h3>
-                                <p class="portfolio__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, officiis?</p>
-                                <a href="" class="button button--flex button--small portfolio__button">
-                                    Demo
-                                    <i class="uil uil-arrow-right button__icon"></i>
-                                </a>
-                            </div>
-                        </div>
-
-                        <!--==================== PORTFOLIO 2 ====================-->
-                        <div class="portfolio__content grid swiper-slide">
-                            <img src="./assets/img/portfolio2.jpg" alt="" class="portfolio__img">
-
-                            <div class="portfolio__data">
-                                <h3 class="portfolio__title">Project 2</h3>
-                                <p class="portfolio__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, minus.</p>
-                                <a href="" class="button button--flex button--small portfolio__button">
-                                    Demo
-                                    <i class="uil uil-arrow-right button__icon"></i>
-                                </a>
-                            </div>
-                        </div>
-
-                        <!--==================== PORTFOLIO 3 ====================-->
-                        <div class="portfolio__content grid swiper-slide">
-                            <img src="./assets/img/portfolio3.jpg" alt="" class="portfolio__img">
-
-                            <div class="portfolio__data">
-                                <h3 class="portfolio__title">Project 3</h3>
-                                <p class="portfolio__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis, qui.</p>
-                                <a href="" class="button button--flex button--small portfolio__button">
-                                    Demo
-                                    <i class="uil uil-arrow-right button__icon"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Add Arrows -->
-                    <div class="swiper-button-next">
-                        <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
-                    </div>
-                    <div class="swiper-button-prev">
-                        <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
-                    </div>
-
-                    <!-- Add Pagination -->
-                    <div class="swiper-pagination"></div>
-                </div>
-            </section>
-
+            
             <!--==================== PROJETOS EM MENTE ====================-->
             <section class="project section">
                 <div class="project__bg">
