--- a/index.html
+++ b/index.html
@@ -43,25 +43,16 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          <a class="nav-link js-scroll-trigger" href="#Research">Research</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#Research">Research</a>
+          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#Cources">Cources</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li>
       </ul>
     </div>
@@ -78,12 +69,14 @@
           <a href="mailto:agundawa@asu.edu">agundawa@asu.edu</a>
         </div>
         <p class="mb-5">
-          Developing techniques for the integration of
+          Developing Frameworks for the integration of
           <a href="https://crfm.stanford.edu/#:~:text=WHAT%20IS%20A%20FOUNDATION%20MODEL%3F"
             class="text-primary">foundational models</a>
           in
           <a href="https://en.wikipedia.org/wiki/Reinforcement_learning" class="text-primary">reinforcement
             learning</a> settings.
+          <br />
+          Updating Website... Please visit back in a day or two. Thanks!
         </p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
@@ -102,14 +95,14 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
+          <!-- <li class="list-inline-item">
             <a href="https://labs.engineering.asu.edu/mps-lab/person/atharva-gundawar/">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-flask fa-stack-1x fa-inverse"></i>
               </span>
             </a>
-          </li>
+          </li> -->
           <li class="list-inline-item">
             <a href="https://scholar.google.com/citations?user=OXU-5msAAAAJ&hl=en">
               <span class="fa-stack fa-lg">
@@ -119,6 +112,70 @@
             </a>
           </li>
         </ul>
+      </div>
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Research">
+      <div class="my-auto">
+        <h2 class="mb-5">Research</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              On the Performance of new Higher Order Transformation Functions
+              for Highly Efficient Dense Layers
+            </h3>
+            <div class="subheading mb-3" style="text-transform: none">
+              Neural Processing Letters
+            </div>
+            <p>
+              Gundawar, A., Lodha, S., Vijayarajan, V., Iyer, B., & Prasath,
+              V. S. (2023). Volume 55, Issue 8, Pages 10655-10668.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2023</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              Enhanced Dense Layers Using a Quadratic Transformation Function
+            </h3>
+            <div class="subheading mb-3" style="text-transform: none">
+              International Conference on Big Data Innovation for Sustainable
+              Cognitive Computing
+            </div>
+            <p>
+              Gundawar, A., & Lodha, S. (2022, December). In Proceedings (pp.
+              3-15). Cham: Springer Nature Switzerland.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">December 2022</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              SQL injection and its detection using machine learning
+              algorithms and BERT
+            </h3>
+            <div class="subheading mb-3" style="text-transform: none">
+              International Conference on Cognitive Computing and Cyber
+              Physical Systems
+            </div>
+            <p>
+              Lodha, S., & Gundawar, A. (2022, November). In Proceedings (pp.
+              3-16). Cham: Springer Nature Switzerland.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">November 2022</span>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -247,70 +304,6 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">November 2019 - March 2020</span>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Research">
-      <div class="my-auto">
-        <h2 class="mb-5">Research</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">
-              On the Performance of new Higher Order Transformation Functions
-              for Highly Efficient Dense Layers
-            </h3>
-            <div class="subheading mb-3" style="text-transform: none">
-              Neural Processing Letters
-            </div>
-            <p>
-              Gundawar, A., Lodha, S., Vijayarajan, V., Iyer, B., & Prasath,
-              V. S. (2023). Volume 55, Issue 8, Pages 10655-10668.
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2023</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">
-              Enhanced Dense Layers Using a Quadratic Transformation Function
-            </h3>
-            <div class="subheading mb-3" style="text-transform: none">
-              International Conference on Big Data Innovation for Sustainable
-              Cognitive Computing
-            </div>
-            <p>
-              Gundawar, A., & Lodha, S. (2022, December). In Proceedings (pp.
-              3-15). Cham: Springer Nature Switzerland.
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">December 2022</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">
-              SQL injection and its detection using machine learning
-              algorithms and BERT
-            </h3>
-            <div class="subheading mb-3" style="text-transform: none">
-              International Conference on Cognitive Computing and Cyber
-              Physical Systems
-            </div>
-            <p>
-              Lodha, S., & Gundawar, A. (2022, November). In Proceedings (pp.
-              3-16). Cham: Springer Nature Switzerland.
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">November 2022</span>
           </div>
         </div>
       </div>
@@ -527,94 +520,6 @@
   </div>
   </section>
 
-  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Cources">
-    <div class="my-auto">
-      <h2 class="mb-5">Cources</h2>
-
-      <ul class="fa-ul mb-0">
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          <strong>Udacity</strong><a href="https://www.udacity.com/certificate/LTRPPQM2" target="_blank">
-            - Deep Learning Nano Degree</a>
-        </li>
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          <strong>AWS</strong><a
-            href="https://login.us-east-1.auth.skillbuilder.aws/login?redirect_uri=https://www.aws.training/LogOnV2/Response&client_id=3ngs935m8cnns64p4m2sm3hsta&response_type=code&scope=openid&state=%2FTranscript%2FCompletionCertificateHtml%3Ftranscriptid%3DtHW-8uy5OUeBUKyVC8vHLg2&require_email_verification=false&identity_provider="
-            target="_blank">
-            - Seeing Clearly: Computer Vision Theory</a>
-        </li>
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          <strong>Jovian.ml</strong><a href="https://jovian.ml/certificate/MFQWCOBRGE" target="_blank">
-            - Deep Learning with Pytorch: Zero to GANs</a>
-        </li>
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          <strong>Deeplearning.ai</strong><a
-            href="https://www.coursera.org/account/accomplishments/verify/VRTEQBVLZ3V9?utm_medium=certificate&utm_source=link&utm_campaign=copybutton_certificate"
-            target="_blank">
-            - Neural Networks and Deep Learning</a>
-        </li>
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          <strong>Super Data Science</strong><a
-            href="https://www.udemy.com/certificate/UC-1a603c03-3e1b-4b05-877e-b17b7c44b0d4/" target="_blank">
-            - Machine Learning A-Z</a>
-        </li>
-      </ul>
-    </div>
-  </section>
-
-  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-    <div class="my-auto">
-      <h2 class="mb-5">Interests</h2>
-      <ul class="fa-ul mb-0">
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          Time Sequence Modeling, S6
-        </li>
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          Transformers, Attention
-        </li>
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          Multi agent Re-inforcement Learning
-        </li>
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          FPGA Acceleration
-        </li>
-      </ul>
-    </div>
-  </section>
-
-  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-    <div class="my-auto">
-      <h2 class="mb-5">Awards &amp; Certifications</h2>
-      <ul class="fa-ul mb-0">
-        <li>
-          <i class="fa-li fa fa-trophy text-warning"></i>
-          Represented University at Smart India Hackathon Place 2022
-        </li>
-        <li>
-          <i class="fa-li fa fa-trophy text-warning"></i>
-          2<sup>nd</sup> Place - University of Colorado Boulder - Emerging
-          Tech Competition 2008
-        </li>
-        <li></li>
-        <li>
-          <i class="fa-li fa fa-trophy text-warning"></i>
-          1<sup>st</sup> Place - Honeywell AI Hackathon 2022
-        </li>
-        <li>
-          <i class="fa-li fa fa-trophy text-warning"></i>
-          3<sup>rd</sup> Place - Hello World 3.0 Hackathon 2019
-        </li>
-      </ul>
-    </div>
-  </section>
   </div>
 
   <!-- Bootstrap core JavaScript -->
